<resources>
    <string name="app_name">Mish-Mash Mush</string>

    <!-- ??? todo dummy values? <string name="id_...">-</string> -->

    <!-- activity_main.xml -->
    <string name="id_toolbar">-</string>
    <string name="id_drawerLayout">-</string>
    <string name="id_navHostFragmentMain">-</string>
    <string name="id_navigationView">-</string>
    <string name="id_floatingActionButton">Email</string>

    <!-- nav_header.xml -->

    <!-- nav_graph.xml -->
    <string name="id_navigation">-</string>
    <string name="id_diceFragmentNav">-</string>
    <string name="id_aboutFragmentNav">-</string>
    <string name="id_gameTitleFragmentNav">-</string>
    <string name="id_action_gameTitle_to_gameQuestions">-</string>
    <string name="id_gameQuestionsFragmentNav">-</string>
    <string name="id_actionWin_gameQuestions_to_gameTitle">-</string>
    <string name="id_actionEnd_gameQuestions_to_gameTitle">-</string>

    <!-- menu_main.xml -->
    <string name="id_shareActionMenu">Share</string>
    <string name="id_shareMenu">Share</string>
    <string name="id_gameQuestionsMenu">Game</string>
    <string name="id_aboutMenu">About</string>
    <string name="id_testOldDividerMenu">--- test/old items below ---</string>
    <string name="id_aboutActivityMenu">About (activity)</string>

    <!-- menu_drawer.xml -->
    <string name="id_gameQuestionsDrawer">Game</string>
    <string name="id_aboutDrawer">About</string>
    <string name="id_testOldDividerDrawer">--- test/old items below ---</string>
    <string name="id_aboutActivityDrawer">About (activity)</string>

    <!-- fragment_dice.xml -->
    <string name="id_guestView">-</string>
    <string name="id_guestEdit">What is your name?</string>
    <string name="id_guestButton">Done</string>
    <string name="id_guestText">-</string>
    <string name="id_diceView">-</string>
    <string name="id_diceText">Roll The Dices!</string>
    <string name="id_dice1Image">Dice</string>
    <string name="id_dice2Image">Dice</string>
    <string name="id_diceRollButton">Roll</string>
    <string name="id_diceCountButton">Cheat</string>
    <string name="id_diceClearButton">Clear</string>
    <string name="id_diceWonButton">You WON a Game!</string>
    <string name="diceStopButton">Stop!</string>
    <string name="diceRolling">rolling...</string>
    <string name="diceCounting">cheating...</string>
    <string name="diceFormat">"%1$d x %2$d"</string>

    <!-- fragment_about.xml -->
    <!-- activity_about.xml -->
    <string name="aboutNameText">mmm4m5m</string>
    <string name="aboutAndroidImage">Android bug</string>
    <string name="aboutNoEntryImage">Road sign - No entry</string>
    <string name="aboutBioText">A secret\n\t\t\t<b>Android</b>\n\t\t\t\t\t\tadmirer!
        \n\nA secret\n\t\t\t<b>Android</b>\n\t\t\t\t\t\tadmirer!
        \n\nA secret\n\t\t\t<b>Android</b>\n\t\t\t\t\t\tadmirer!
        \n\nA secret\n\t\t\t<b>Android</b>\n\t\t\t\t\t\tadmirer!
        \n\nA secret\n\t\t\t<b>Android</b>\n\t\t\t\t\t\tadmirer!
        \n\nA secret\n\t\t\t<b>Android</b>\n\t\t\t\t\t\tadmirer!</string>

    <!-- fragment_game_title.xml -->
    <string name="id_gameStartImage">-</string>
    <string name="id_gameWinImage">Android mascot celebrating</string>
    <string name="id_gamePlayButton">Play!</string>
    <string name="gameQuestionImage">Android mascot wondering</string>
    <string name="gamePlayAgain">"Again?"</string>
    <string name="gameWinShare">"I won with %1$d/%2$d correct answers!"</string>
    <string name="errStartActivity">"Error: Application not found. (%1$s)"</string>

    <!-- fragment_game_questions.xml -->
    <string name="id_gameQuestionImage">-</string>
    <string name="id_gameQuestionText">id_questionText</string>
    <string name="id_gameAnswersRadioGroup">-</string>
    <string name="id_gameAnswer1RadioButtonGame">-</string>
    <string name="id_gameAnswer2RadioButtonGame">-</string>
    <string name="id_gameAnswer3RadioButtonGame">-</string>
    <string name="id_gameAnswer4RadioButtonGame">-</string>
    <string name="id_gameSubmitButton">Submit</string>
    <string name="gameQuestionTitle">Question %1$d of %2$d</string>

    <!-- GameQuestionsFragment.kt -->
    <!-- The first answer is the correct one. All questions must have four answers. -->
    <string name="gameQuestion_1">What is Android Jetpack?|All of these/Tools/Documentation/Libraries</string>
    <string name="gameQuestion_2">What is the base class for layouts?|ViewGroup/ViewSet/ViewCollection/ViewRoot</string>
    <string name="gameQuestion_3">What layout do you use for complex screens?|ConstraintLayout/GridLayout/LinearLayout/FrameLayout</string>
    <string name="gameQuestion_4">What do you use to push structured data into a layout?|Data binding/Data pushing/Set text/An OnClick method</string>
    <string name="gameQuestion_5">What method do you use to inflate layouts in fragments?|onCreateView()/onActivityCreated()/onCreateLayout()/onInflateLayout()</string>
    <string name="gameQuestion_6">What\'s the build system for Android?|Gradle/Graddle/Grodle/Groyle</string>
    <string name="gameQuestion_7">Which class do you use to create a vector drawable?|VectorDrawable/AndroidVectorDrawable/DrawableVector/AndroidVector</string>
    <string name="gameQuestion_8">Which one of these is an Android navigation component?|NavController/NavCentral/NavMaster/NavSwitcher</string>
    <string name="gameQuestion_9">Which XML element lets you register an activity with the launcher activity?|intent-filter/app-registry/launcher-registry/app-launcher</string>
    <string name="gameQuestion_10">What do you use to mark a layout for data binding?|&lt;layout>/&lt;binding>/&lt;data-binding>/&lt;dbinding></string>

    <!-- - -->
    <!-- ! -->
</resources>
