<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutFragment"
    tools:viewBindingIgnore="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/aboutNameText"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:contentDescription="@string/aboutAndroidImage"
        app:srcCompat="@drawable/ic_baseline_adb_24" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:contentDescription="@string/aboutNoEntryImage"
        android:visibility="gone"
        app:srcCompat="@android:drawable/presence_busy"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:fontFamily="@font/roboto"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/aboutBioText"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                tools:text="Line 1\nLine 2\nLine 3\nLine 4\nLine 5\nLine 6\nLine 7\nLine 8\nLine 9\nLine 0\nLine 1\nLine 2\nLine 3\nLine 4\nLine 5\nLine 6" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
